--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -340,10 +340,10 @@ html, body {
     }
 
     h1, h2, h3, h4, h5, h6 {
-        color: #fbfbfb;
+        color: #fff;
 
         small {
-            color: #a2adb7;
+            color: #fff;
         }
     }
 }
