--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,3 @@
-#intro {
-    background-image: url('../../demo/background-image-1.jpg');
-}
-
-#personality {
+#madefor {
     background-image: url('../../demo/background-image-2.jpg');
 }
