--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -410,6 +410,9 @@ html, body {
     .grid > * {
         font-size: 16px;
     }
+    small {
+        margin-top: 24px;
+    }
 }
 
 [class*="icon-social"] {
