--- a/Frameless/Base.lproj/Main.storyboard
+++ b/Frameless/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -279,6 +279,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="dZA-Ao-ZpJ" secondAttribute="bottom" id="1Ou-Dj-qCN"/>
                             <constraint firstItem="dZA-Ao-ZpJ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="8hb-PD-BLd"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="leading" secondItem="50v-cP-i7q" secondAttribute="leading" id="GtS-b3-s9D"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="top" secondItem="dZA-Ao-ZpJ" secondAttribute="top" id="NQg-J3-edc"/>
@@ -286,7 +287,6 @@
                             <constraint firstItem="dZA-Ao-ZpJ" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="RMe-9O-agz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dZA-Ao-ZpJ" secondAttribute="trailing" constant="-16" id="TkV-EE-Bq5"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="top" secondItem="50v-cP-i7q" secondAttribute="top" id="X06-uZ-JAY"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="dZA-Ao-ZpJ" secondAttribute="bottom" id="ay1-H6-F2Z"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="cga-z9-0km"/>
                             <constraint firstAttribute="trailingMargin" secondItem="50v-cP-i7q" secondAttribute="trailing" constant="-16" id="dMo-8m-LWm"/>
                             <constraint firstItem="50v-cP-i7q" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="qkh-2S-Nxx"/>
