--- a/Frameless/Base.lproj/Main.storyboard
+++ b/Frameless/Base.lproj/Main.storyboard
@@ -60,14 +60,24 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ysq-SM-jXj" secondAttribute="trailing" id="66G-hJ-eIS"/>
+                            <constraint firstAttribute="trailing" secondItem="B2i-8Y-xZt" secondAttribute="trailing" id="AWg-vg-RDr"/>
                             <constraint firstItem="ysq-SM-jXj" firstAttribute="height" secondItem="umQ-4I-SdK" secondAttribute="height" constant="-44" id="AxW-aJ-Pge"/>
+                            <constraint firstItem="B2i-8Y-xZt" firstAttribute="leading" secondItem="umQ-4I-SdK" secondAttribute="leading" id="Ffu-Ey-TPj"/>
                             <constraint firstAttribute="width" secondItem="B2i-8Y-xZt" secondAttribute="width" id="MJx-9r-JDp"/>
                             <constraint firstItem="B2i-8Y-xZt" firstAttribute="top" secondItem="umQ-4I-SdK" secondAttribute="topMargin" id="QtO-Kd-YwZ"/>
                             <constraint firstItem="B2i-8Y-xZt" firstAttribute="leading" secondItem="umQ-4I-SdK" secondAttribute="leadingMargin" constant="-16" id="UC3-Dg-1Eq"/>
+                            <constraint firstItem="ysq-SM-jXj" firstAttribute="leading" secondItem="umQ-4I-SdK" secondAttribute="leading" id="WcL-bQ-Nh8"/>
                             <constraint firstItem="ysq-SM-jXj" firstAttribute="leading" secondItem="umQ-4I-SdK" secondAttribute="leadingMargin" constant="-16" id="a1W-W6-7vT"/>
                             <constraint firstItem="ysq-SM-jXj" firstAttribute="width" secondItem="umQ-4I-SdK" secondAttribute="width" id="k5R-L5-38H"/>
                             <constraint firstItem="ysq-SM-jXj" firstAttribute="top" secondItem="B2i-8Y-xZt" secondAttribute="bottom" id="rcw-kv-kgy"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="UC3-Dg-1Eq"/>
+                                <exclude reference="a1W-W6-7vT"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="_closeButton" destination="vac-kN-Lmw" id="Kvg-ai-sO1"/>
@@ -285,17 +295,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="50v-cP-i7q" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="07P-ke-ECf"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="dZA-Ao-ZpJ" secondAttribute="bottom" id="1Ou-Dj-qCN"/>
-                            <constraint firstItem="dZA-Ao-ZpJ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="8hb-PD-BLd"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="leading" secondItem="50v-cP-i7q" secondAttribute="leading" id="GtS-b3-s9D"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="top" secondItem="dZA-Ao-ZpJ" secondAttribute="top" id="NQg-J3-edc"/>
                             <constraint firstItem="Sve-Sf-iR0" firstAttribute="top" secondItem="50v-cP-i7q" secondAttribute="bottom" constant="75" id="P9y-LR-Yg6"/>
                             <constraint firstItem="dZA-Ao-ZpJ" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="RMe-9O-agz"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dZA-Ao-ZpJ" secondAttribute="trailing" constant="-16" id="TkV-EE-Bq5"/>
+                            <constraint firstAttribute="trailing" secondItem="50v-cP-i7q" secondAttribute="trailing" id="UVB-h4-rey"/>
+                            <constraint firstAttribute="trailing" secondItem="dZA-Ao-ZpJ" secondAttribute="trailing" id="W5C-oB-vn9"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="top" secondItem="50v-cP-i7q" secondAttribute="top" id="X06-uZ-JAY"/>
+                            <constraint firstItem="dZA-Ao-ZpJ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="X5Y-W6-tOZ"/>
                             <constraint firstItem="2LR-xw-2qa" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="cga-z9-0km"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="50v-cP-i7q" secondAttribute="trailing" constant="-16" id="dMo-8m-LWm"/>
-                            <constraint firstItem="50v-cP-i7q" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="qkh-2S-Nxx"/>
                         </constraints>
                     </view>
                     <connections>
